--- a/index.html
+++ b/index.html
@@ -12,7 +12,41 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>HTML describes the structure of a webpage.</li>
+          <li>The head element contains information about the webpage.</li>
+          <li>The title element is the only user visible element in the head element. It names the tab of a webpage.</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <li>Elements nested in other elements are called Child Elements.</li>
+          <li>Child elements are nested in Parents Elements.</li>
+          <li>Element is everything in between opening and closing tags.</li>
+          <li>Tag is only what is in between the angle brackets.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>Never edit directly from the main branch</li>
+          <li>Git command must proceed every Git statement.</li>
+          <li>git status: checks what branch we are currently on.</li>
+          <li>git checkout branch name: moves working branch to another branch.</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it.</li>
+          <li>Always use 'git pull original main' (change "main" to the branch name you are branching from) to pull most recent version of branch. This way you will not be working from an outdated code version.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+   
+      </section>
     </main>
 
     <footer>
