added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -28,7 +29,17 @@
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
-   
+        <ul>
+          <li> CSS is used to make webpage more user friendly, by adding colors, aligning text, and other styles.</li>
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+          <li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>External CSS file sheet is preferred because it keeps rules separate from HTML file.</li>
+          <li>Inline CSS file styles an element directly on the HTML file and should only be used for quick and permanent changes.</li>
+          <li>Internal Style Sheet adds CSS rules directly in HTML head element and applies only to that particular page.</li>
+          <li>It is best practice to separate code into different files based on use, this is called Separation of Concerns.</li>
+          <li>Avoid repeating rules, when possible, combine 2 or more selectors (using comma) when creating a rule. DRY - Do Not Repeat Yourself!</li>
+          <li>Create Class Attributes as selectors (i.e.: .card) to add styles to certain elements, not all.</li>
+        </ul>
       </section>
    
       <section class="card" id="git-section">
@@ -45,7 +56,9 @@
    
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
-   
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
       </section>
     </main>
 
