--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>JavaScript makes the website interactive.</li>
+          <li>Use DevTools in web browser to see how JS is interacting with website.</li>
+          <li>A variable is a name container that allows us to store data in our code. Use "var" to declare a variable.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Control flow can be altered by conditional statements and loops.</li>
+          <li>A function is a set of instructions that tells the computer how to perform a task.</li>
+          <li>Functions don't run automatically, they must be called.</li>
         </ul>
       </section>
     </main>
